# generics-sop

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Test.hs  cabal.haskell-ci  cabal.project  doctest.sh  generics-sop.cabal
.github/workflows/: haskell-ci.yml
bench/: SOPBench.hs
bench/SOPBench/: Eq.hs  Show.hs  Type.hs
benchmark/: Allocation.hs  Benchmark.hs  Data.hs
benchmark/Generics/SOP/Benchmark/: Allocation.hs  Bench.hs  Benchmark.hs  Data.hs  Time.hs
generics-sop/: CHANGELOG.md  doctest.sh  generics-sop.cabal
generics-sop/bench/: SOPBench.hs
generics-sop/bench/SOPBench/: Eq.hs  Roundtrip.hs  Type.hs
generics-sop/src/Generics/: SOP.hs
generics-sop/src/Generics/SOP/: BasicFunctors.hs  Classes.hs  Constraint.hs  Dict.hs  GGP.hs  Instances.hs  Metadata.hs  NP.hs  NS.hs  Sing.hs  TH.hs  Universe.hs  Universe1.hs
generics-sop/src/Generics/SOP/Type/: Metadata.hs
generics-sop/test/: Example.hs  HTransExample.hs
sop/: CHANGELOG.md  doctest.sh  sop.cabal
sop-core/: CHANGELOG.md  sop-core.cabal
sop-core/doctests/: DocTests.hs
sop-core/src/Data/: SOP.hs
sop-core/src/Data/SOP/: BasicFunctors.hs  Classes.hs  Constraint.hs  Dict.hs  NP.hs  NS.hs  Sing.hs
sop-core/src/Data/SOP/NP/: Internal.hs  TF.hs
sop-core/src/Data/SOP/NS/: Internal.hs
sop/src/Data/: SOP.hs
sop/src/Data/SOP/: Classes.hs  Constraint.hs  Dict.hs  NP.hs  Sing.hs
src/Generics/: SOP.hs
src/Generics/SOP/: BasicFunctors.hs  Classes.hs  Constraint.hs  Derived.hs  Dict.hs  GGP.hs  Instances.hs  Metadata.hs  NP.hs  NS.hs  Sing.hs  TH.hs  Universe.hs
src/Generics/SOP/Type/: Metadata.hs
staged-sop/: staged-sop.cabal
staged-sop-examples/: core  results  staged-sop-examples.cabal
staged-sop-examples/bench/: Bench.hs
staged-sop-examples/src/: ExampleFunctions.hs  ExampleFunctionsSOP.hs  ExampleFunctionsStaged.hs  ExampleTypes.hs
staged-sop/src/Generics/SOP/: Staged.hs
staged-sop/src/Generics/SOP/Staged/: TH.hs
test/: Benchmark.hs  Example.hs  Proofs.hs  TestInstances.hs
test/Proofs/: Metadata.hs  Types.hs
testcase/: Test.hs  TestUse.hs
