name:                sop
version:             0.3.2.0
synopsis:            True Sums of Products
description:
  Implementation of true sums of products.
  .
  The module "Data.SOP" is the main module of this library and contains
  more detailed documentation.
  .
  Examples of using this library are provided by the following
  packages:
  .
    * @<https://hackage.haskell.org/package/generics-sop generics-sop>@ generics
  .
    * @<https://hackage.haskell.org/package/basic-sop basic-sop>@ basic examples,
  .
    * @<https://hackage.haskell.org/package/pretty-sop pretty-sop>@ generic pretty printing,
  .
    * @<https://hackage.haskell.org/package/lens-sop lens-sop>@ generically computed lenses,
  .
    * @<https://hackage.haskell.org/package/json-sop json-sop>@ generic JSON conversions.
  .
  A detailed description of the ideas behind this library is provided by
  the paper:
  .
    * Edsko de Vries and Andres Löh.
      <http://www.andres-loeh.de/TrueSumsOfProducts True Sums of Products>.
      Workshop on Generic Programming (WGP) 2014.
  .
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries <edsko@well-typed.com>, Andres Löh <andres@well-typed.com>
maintainer:          andres@well-typed.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md doctest.sh
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1, GHC == 8.4.3

source-repository head
  type:                git
  location:            https://github.com/well-typed/generics-sop

library
  exposed-modules:     Data.SOP
                       Data.SOP.Dict
                       -- exposed via Data.SOP:
                       Data.SOP.BasicFunctors
                       Data.SOP.Classes
                       Data.SOP.Constraint
                       Data.SOP.NP
                       Data.SOP.NS
                       Data.SOP.Sing
  build-depends:       base                 >= 4.7  && < 5,
                       deepseq              >= 1.3  && < 1.5
  -- is transformers actually required?
  if !impl (ghc >= 8.0)
    build-depends:     transformers-compat  >= 0.3  && < 0.7,
                       transformers         >= 0.3  && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  CPP
                       ScopedTypeVariables
                       TypeFamilies
                       RankNTypes
                       TypeOperators
                       GADTs
                       ConstraintKinds
                       MultiParamTypeClasses
                       TypeSynonymInstances
                       FlexibleInstances
                       FlexibleContexts
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       DefaultSignatures
                       KindSignatures
                       DataKinds
                       FunctionalDependencies
                       AutoDeriveTypeable
  other-extensions:    OverloadedStrings
                       PolyKinds
                       UndecidableInstances
                       TemplateHaskell
                       DeriveGeneric
                       StandaloneDeriving
  if impl (ghc < 7.10)
    other-extensions:    OverlappingInstances