cabal-version: 3.0
name: staged-sop-examples
version: 0.1
build-type: Simple

common dependencies
  default-language: Haskell2010
  build-depends:
    base,
    cborg,
    deepseq,
    sop-core ^>= 0.5,
    generics-sop ^>= 0.5,
    serialise,
    staged-sop,
    template-haskell,
    text,
    time

library
  import: dependencies
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
  exposed-modules:
    ExampleFunctions
    ExampleFunctionsSOP
    ExampleFunctionsStaged
    ExampleTypes

benchmark comparison
  import: dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Bench.hs
  build-depends:
    staged-sop-examples,
    gauge
